--- a/src/main/webapp/templates/adminHeader.xhtml
+++ b/src/main/webapp/templates/adminHeader.xhtml
@@ -13,14 +13,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
-                    <ui:fragment rendered="#{ViewController.activeTab=='bookingen'}">
+                    <ui:fragment rendered="#{ViewController.activeTab=='boekingen'}">
                         <li class="nav-item active">
-                            <a class="nav-link" href="/travelmore/admin/bookingen.xhtml">Bookingen</a>
+                            <a class="nav-link" href="/travelmore/admin/boekingen.xhtml">Boekingen</a>
                         </li>
                     </ui:fragment>
-                    <ui:fragment rendered="#{ViewController.activeTab!='bookingen'}">
+                    <ui:fragment rendered="#{ViewController.activeTab!='boekingen'}">
                         <li class="nav-item">
-                            <a class="nav-link" href="/travelmore/admin/bookingen.xhtml">Bookingen</a>
+                            <a class="nav-link" href="/travelmore/admin/boekingen.xhtml">Boekingen</a>
                         </li>
                     </ui:fragment>
 
