--- a/src/main/webapp/templates/defLoader.xhtml
+++ b/src/main/webapp/templates/defLoader.xhtml
@@ -3,10 +3,8 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <ui:composition>
-        <div id="loader">
-            <div class="circle">
-
-            </div>
+        <div id="loader" class="text-center">
+            <div class="circle"></div>
         </div>
     </ui:composition>
 </html>
