--- a/src/main/webapp/templates/layout_admin.xhtml
+++ b/src/main/webapp/templates/layout_admin.xhtml
@@ -24,23 +24,38 @@
     <!-- Title -->
     <title>  Travelmore | <ui:insert name="title"></ui:insert></title>
 </h:head>
-<h:body>
+<h:body onload="loading()">
     <div id="header">
         <ui:insert name="header" >
             <ui:include src="/templates/adminHeader.xhtml" />
         </ui:insert>
     </div>
 
-    <ui:insert name="content" >
-        <ui:include src="/templates/defContent.xhtml" />
-    </ui:insert>
+    <ui:include src="/templates/defLoader.xhtml" />
 
-    <ui:insert name="footer" >
-        <ui:include src="/templates/defFooter.xhtml" />
-    </ui:insert>
+    <div id="loadDiv" style="display:none;" class="animate-bottom">
+        <ui:insert name="content" >
+            <ui:include src="/templates/defContent.xhtml" />
+        </ui:insert>
 
+        <ui:insert name="footer" >
+            <ui:include src="/templates/defFooter.xhtml" />
+        </ui:insert>
+    </div>
     <script src="#{request.contextPath}/resources/js/jquery-3.3.1.min.js"></script>
     <script src="#{request.contextPath}/resources/js/popper.min.js"></script>
     <script src="#{request.contextPath}/resources/js/bootstrap.min.js"></script>
+    <script>
+        var loadVar;
+
+        function loading() {
+            loadVar = setTimeout(showPage, 800);
+        }
+
+        function showPage() {
+            document.getElementById("loader").style.display = "none";
+            document.getElementById("loadDiv").style.display = "block";
+        }
+    </script>
 </h:body>
 </html>
