--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -2,22 +2,22 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:100,400,700);
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab);
 
-.card{
-    margin-top: 20px !important;
-}
-.card-deck{
-    margin-bottom: 40px;
-}
-.test {
-    right: 0;
-    left: auto;
-}
-@media (max-width: 992px) {
-    .test {
-        left: 0;
-        right:auto;
-    }
-}
+/*.card{*/
+    /*margin-top: 20px !important;*/
+/*}*/
+/*.card-deck{*/
+    /*margin-bottom: 40px;*/
+/*}*/
+/*.test {*/
+    /*right: 0;*/
+    /*left: auto;*/
+/*}*/
+/*@media (max-width: 992px) {*/
+    /*.test {*/
+        /*left: 0;*/
+        /*right:auto;*/
+    /*}*/
+/*}*/
 
 /* NAVBAR */
 .navbar-toggle {
@@ -179,6 +179,31 @@ ul.nav.navbar-nav.navbar-right{
     background-color: lightgray;
 }
 
+/* REIZEN */
+.card-img-top{
+    width: 100%;
+    height: 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.reistitle{
+    color: #f04c25;
+}
+a.reistitle:hover{
+    color: #009cab;
+}
+.prijstitle{
+    color: #009cab;
+}
+.bestelbtn{
+    background-color: #f04c25;
+    color: #fff;
+}
+.bestelbtn:hover, .bestelbtn:focus{
+    background-color: rgba(255, 72, 37, 0.75);
+    color: #fff;
+}
+
 /* LOGIN */
 .login-block{
     background: #f04c25;  /* fallback for old browsers */
@@ -251,7 +276,6 @@ ul.nav.navbar-nav.navbar-right{
 }
 #loadDiv {
     display: none;
-    text-align: center;
 }
 .animate-bottom {
     position: relative;
