--- a/src/main/webapp/templates/layout_admin.xhtml
+++ b/src/main/webapp/templates/layout_admin.xhtml
@@ -31,9 +31,9 @@
         </ui:insert>
     </div>
 
-    <ui:include src="/templates/defLoader.xhtml" />
+    <!--<ui:include src="/templates/defLoader.xhtml" />-->
 
-    <div id="loadDiv" style="display:none;" class="animate-bottom">
+    <!--<div id="loadDiv" style="display:block;" class="animate-bottom">-->
         <ui:insert name="content" >
             <ui:include src="/templates/defContent.xhtml" />
         </ui:insert>
@@ -41,7 +41,7 @@
         <ui:insert name="footer" >
             <ui:include src="/templates/defFooter.xhtml" />
         </ui:insert>
-    </div>
+    <!--</div>-->
     <script src="#{request.contextPath}/resources/js/jquery-3.3.1.min.js"></script>
     <script src="#{request.contextPath}/resources/js/popper.min.js"></script>
     <script src="#{request.contextPath}/resources/js/bootstrap.min.js"></script>
@@ -49,7 +49,7 @@
         var loadVar;
 
         function loading() {
-            loadVar = setTimeout(showPage, 800);
+            loadVar = setTimeout(showPage, 700);
         }
 
         function showPage() {
