suggesties op index

--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -174,7 +174,7 @@ ul.nav.navbar-nav.navbar-right{
 
 /* INDEX nieuws */
 .grijs{
-    background-color: #adb5bd;
+    background-color: #009cab;
     padding-top: 60px;
     padding-bottom: 60px;
 }
