--- a/src/main/webapp/templates/defHeader.xhtml
+++ b/src/main/webapp/templates/defHeader.xhtml
@@ -4,8 +4,8 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <ui:composition>
         <nav class="navbar navbar-default navbar-fixed-top navbar-expand-md sticky-top">
-            <div class="container">
-                <a class="navbar-brand" href="/travelmore/" title="HOME">
+            <div class="container admintitle">
+                <a class="navbar-brand" href="/travelmore/" title="HOME" onclick="">
                     <h:graphicImage height="60px" library="images" name="navheader.png" />
                     Travel<span>More</span>
                 </a>
